-Second lesson of SpringBoot Sweater

--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -1,6 +1,29 @@
-<html>
-
+<html lang="ru">
+<head>
+    <meta http-equiv="content-type" content="text/html; charset=windows-1251"/>
+</head>
 <body>
-<div>{{some}}</div>
+<div>
+    <form method="post">
+        <input type="text" name="text" placeholder="Insert text">
+        <input type="text" name="tag" placeholder="Insert tag">
+        <button type="submit">Add</button>
+    </form>
+</div>
+<div>
+    <form method="post" action="filter">
+        <input type="text" name="filter">
+        <button type="submit">Find</button>
+    </form>
+</div>
+
+<h1>List of Messages</h1>
+{{#messages}}
+    <div>
+        <b>{{id}}</b>
+        <span>{{text}}</span>
+        <i>{{tag}}</i>
+    </div>
+{{/messages}}
 </body>
 </html>
