--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -4,15 +4,23 @@
 </head>
 <body>
 <div>
+    <form action="/logout" method="post">
+        <input type="submit" value="Sign Out"/>
+        <input type="hidden" name="_csrf" value="{{_csrf.token}}">
+    </form>
+</div>
+<div>
     <form method="post">
         <input type="text" name="text" placeholder="Insert text">
         <input type="text" name="tag" placeholder="Insert tag">
+        <input type="hidden" name="_csrf" value="{{_csrf.token}}">
         <button type="submit">Add</button>
     </form>
 </div>
 <div>
     <form method="post" action="filter">
         <input type="text" name="filter">
+        <input type="hidden" name="_csrf" value="{{_csrf.token}}">
         <button type="submit">Find</button>
     </form>
 </div>
